gradle multi module - project dependencies

--- a/gradle/firstWebApp/firstWebApp/src/main/webapp/index.html
+++ b/gradle/firstWebApp/firstWebApp/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <a href="coupon">Get Coupon</a>
-    <form method="post" action="/coupon">
+    <form method="post" action="coupon">
         Coupon Code: <input type="text" name="coupon"/>
         <input type="submit" value="Get Discount"/>
     </form>
